fixed header z-index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -566,7 +566,7 @@ a:hover {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 100;
   background: #fff;
   box-shadow: rgba(0,0,0,.1) 0 1px 5px;
 }
